# python-scripts

./: .gitignore  README.md  pyproject.toml
api/: main.py  route.py
api/services/: openai_service.py
scripts/: openai.py
